--- a/bryan.html
+++ b/bryan.html
@@ -1,15 +1,26 @@
-<html>
-    <head>
-        <link> /workspaces/Bryan-Kauan/style.css <link>
-        <body>
-            <title> Teste de titulo</title>
-       <h1>Site de Música</h1>
-        <h2> Playlists</h2>
-    <h3>Músicas</h3>
-    <h4> .</h4>  
-    <img src="https://cdn-icons-png.flaticon.com/512/4814/4814747.png
-        " alt="">
+<html> 
+   <head>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bryan Kauan</title>
+    <link rel="stylesheet" href="style.css"
+</head>
+<body>
+    <header>
+        <h1>Site de Músicas</h1>
+    </header>
+    <div class="container">
+        <div class="main-content">
+            <h2>Site criado pelo aluno Bryan Kauan</h2>
+            <p>Página  Inicial do Site </p>
+            <p>Links para músicas:</p>
+            <ul>
+                <li><a href="playlist rock.html">Playlist de Músicas</a></li>
+                <li><a href="">Playlist de Rock</a></li>
+                <a href=""
+            </ul>
+        </div>
+   
+   </head>
 
-        </body>
-    </head>
-</html> 
+</html>
