--- a/bryan.html
+++ b/bryan.html
@@ -13,10 +13,10 @@
         <div class="main-content">
             <h2>Site criado pelo aluno Bryan Kauan</h2>
             <p>Página  Inicial do Site </p>
-            <p>Links para músicas:</p>
+            <p>Links para Minhas Playlists:</p>
             <ul>
-                <li><a href="playlist rock.html">Playlist de Músicas</a></li>
-                <li><a href="">Playlist de Rock</a></li>
+                <li><a href="https://open.spotify.com/playlist/0bPsDUiNAEZLStSe4UaLje?si=6f0cb735a92241c8">Playlist de Músicas</a></li>
+                <li><a href="https://open.spotify.com/playlist/1Stqz7mACWZRCO60YfhNgp?si=d92c602890e24dec">Playlist de Rock</a></li>
                 <a href=""
             </ul>
         </div>
