--- a/bryan.html
+++ b/bryan.html
@@ -28,7 +28,7 @@
     </header>
     <div class="container">
         <div class="main-content">
-            <h2>Site criado pelo aluno Bryan Kauan</h2>
+            <h2>Site sobre a banda Slipknot</h2>
             <p>Página  Inicial do Site </p>
             <p>Links para Minhas Playlists:</p>
             <ul>
