--- a/bryan.html
+++ b/bryan.html
@@ -11,6 +11,12 @@
     <h1>Bem-vindo à Minha Página</h1>
     <p>O seu site para salvar e ouvir suas playlists e músicas!</p>
 </div>
+<div class="navbar">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+  </div>
 
 </body>
 </html>
