--- a/bryan.html
+++ b/bryan.html
@@ -37,7 +37,7 @@
                 Ao longo de sua carreira, o Slipknot lançou vários álbuns de sucesso, como "Slipknot" (1999), "Iowa" (2001), "Vol. 3: (The Subliminal Verses)" (2004), "All Hope Is Gone" (2008) e " .5: The Gray Chapter" (2014). Suas músicas mais conhecidas incluem "Wait and Bleed", "Duality", "Psychosocial" e "Before I Forget".
                 
                 Além de sua música, o Slipknot também é conhecido por seus shows ao vivo intensos, com performances cheias de energia e teatrais. A banda construiu uma base de fãs leais e dedicados ao longo dos anos, tornando-se uma das bandas mais icônicas e influentes do metal moderno.</p> 
-                <img src="https://th.bing.com/th/id/R.b57233ba2fc765c3c9bfaed853982a5a?rik=aUfZ7xAuvCD5kQ&riu=http%3a%2f%2froadie-metal.com%2fwp-content%2fuploads%2f2019%2f07%2fSlipknot-2019.jpg&ehk=8rx0FQzlyVuYXDePjKoMq4CaPqAtlD6XZjmvRsqT%2bfs%3d&risl=&pid=ImgRaw&r=0" alt="slipknot imagem"  class="slipknot-imagem">
+                <img src="https://rollingstone.uol.com.br/media/uploads/2022/12/slipknot-foto-anthony-scanga.jpg" alt="slipknot imagem"  class="slipknot-imagem">
 
 
             </div>
