--- a/bryan.html
+++ b/bryan.html
@@ -227,7 +227,8 @@ e metal extremo. Isso contribui para a sua singularidade no cenário musical e a
    </div>
 
     <div id="formulário"> 
-        <h1> Formulário </h1> 
+        <h1> Acha que faltou algo e gostaria de ver no site?</h1> 
+        <h2> Nós contate!<h2>
         <form action="/submit" method="post">
             <label for="name">Nome:</label><br>
             <input type="text" id="name" name="name" required><br>
